# geo

./: .gitignore  Taskfile.yaml  environment-remote.yml  environment.yml  gunicorn_config.py  pyproject.toml
app/: __init__.py  __main__.py  cli.py  config.py  frontend.py  main.py
app/assets/css/: main.css
app/core/: ip.py
app/css/: main.css
app/flickr/: __init__.py
app/geo/: __init__.py  geodb.py  lookup_image.py  maxmind.py  models.py
app/geo/geocoder/: __init__.py  bing.py  here.py  meta.py  nomatim.py  tomtom.py
app/geo/reader/: meta.py  v1.py  v2.py
app/routers/: api.py  ws.py
geo/: __init__.py  __main__.py  cli.py  config.py  main.py
geo/core/: __init__.py  ip.py
geo/geo/: lookup_image.py  maxmind.py  models.py
geo/geo/geocoder/: __init__.py  bing.py  here.py  meta.py  nomatim.py  tomtom.py
geo/geo/image/: api.py  db.py  fields.py
geo/geo/image/models/: base.py  lookup.py
geo/geo/reader/: meta.py  v1.py  v2.py
geo/routers/: api.py  ws.py
web/: .gitignore  angular.json  ngsw-config.json  package-lock.json  package.json
web/src/: index.html  manifest.webmanifest  styles.scss
web/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts
web/src/app/directives/: location-bg.directive.spec.ts  location-bg.directive.ts
web/src/app/entity/: api.entity.ts  location.entity.ts  lookup.entity.ts  websockets.entiity.ts
web/src/app/models/: location.model.ts  lookup.model.ts
web/src/assets/: site.webmanifest
web/src/theme/: mixins.scss
(+54 files in other folders)
