[tool.poetry]
name = "geo"
version = "0.1.0"
description = ""
authors = ["cacko <alex@cacko.net>"]

[[tool.poetry.source]]
name = "cacko"
secondary = true
url = "https://pypi.cacko.net/simple/"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
gunicorn = { extras = ["gevent"], version = "^20.1.0" }
GeoIP = "^1.3.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
