[tool.poetry]
name = "geo"
version = "0.1.0"
description = ""
authors = ["cacko <alex@cacko.net>"]

[[tool.poetry.source]]
name = "cacko"
secondary = true
url = "https://pypi.cacko.net/simple/"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
gunicorn = { extras = ["gevent"], version = "^20.1.0" }
redis = "^4.2.2"
cachable = "^0.2.4"
validators = "^0.18.2"
click = "^8.1.3"
dataclasses-json = "^0.5.7"
geoip2 = "^4.5.0"
stringcase = "^1.2.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
